# misc-tools

./: Justfile  Makefile  README.md  pyproject.toml  ruff.toml
src/misc_tools/: __init__.py  dump_src.py  generate_makefile.py  md2pdf.py
