[project]
name = "misc-tools"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
generate-makefile = "misc_tools.generate_makefile:main"
dump-src = "misc_tools.dump_src:main"
md2pdf = "misc_tools.md2pdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
